--- a/gallery.html
+++ b/gallery.html
@@ -39,7 +39,7 @@
                     
                     <p>Lord Krishna reveals his cosmic form to Arjuna during the Bhagavad Gita discourse.</p>
 
-                    <video src="images/43699058879489757.mp4" width="150" height="250" controls>Video is not supported</video>
+                    <video src="images/43699058879489757.mp4" width="150" height="250" controls autoplay loop>Video is not supported</video>
 
                     <p>Kon hai krishna??? purna partmana? ya ek premi ya fir ab ek yogi? kon hai krishna</p>
                 </div>
