--- a/story.html
+++ b/story.html
@@ -14,10 +14,9 @@
             <p>
                 <a href="index.html"><button>🏠 Home</button></a> | 
                 <a href="characters.html"><button>👥 Characters</button></a> | 
-                <a href="story.html"><button>📚 Story</button></a> | 
+                <a href="story.html"><button>📚 Story</button></a> | <br><br>
                 <a href="gallery.html"><button>🖼️ Gallery</button></a> | 
-                <a href="contact.html"><button>📧 Contact</button></a> |
-                <a href="search.html"><button>🔍 Search</button></a>
+                <a href="contact.html"><button>📧 Contact</button></a> 
             </p>
         </nav>
     </header>
