--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <p>
                 <a href="index.html"><button>🏠 Home</button></a> | 
                 <a href="characters.html"><button>👥 Characters</button></a> | 
-                <a href="story.html"><button>📚 Story</button></a> | <br><br>
+                <a href="story.html"><button>📚 Story</button></a>  <br><br>
                 <a href="gallery.html"><button>🖼️ Gallery</button></a> | 
                 <a href="contact.html"><button>📧 Contact</button></a>
             </p>
@@ -59,7 +59,7 @@
 
             <h4 id="listen">Listen a song:</h4>
             <audio controls>
-                <source src="images/Shyam_Chanda_Hai_Shyama_Chakori_｜_Nandlal_Chhanga_｜_श्री_कृष्ण_और.m4a" type="audio/mp3">
+                <source src="images/Shyam_Chanda_Hai_Shyama_Chakori_｜_Nandlal_Chhanga_｜_श्री_कृष्ण_और.m4a" type="audio/m4a">
                 Your browser does not support the audio element.
             </audio>
             
