--- a/index.html
+++ b/index.html
@@ -58,8 +58,12 @@
             <iframe width="350" height="200" src="https://www.youtube.com/embed/HC3rBEQXHTY"></iframe>
 
             <h4 id="listen">Listen to a song:</h4>
-            <audio controls>
+            <p>Tum Hi tum ✨ :</p><audio controls>
                 <source src="images/Tum_Hi_Tum_｜_Radha_Krishn_｜_MOhit_Lalwani_｜_Aishwarya_Anand_｜_Ravi.m4a" type="audio/mp4">
+            </audio>
+
+            <p>Krishna flute 🦚 :</p><audio controls>
+                <source src="images/2fGVsLr6hCc.mp3" type="audio/mp4">
             </audio>
             
             <p>Navigate to other sections to learn more about the characters, detailed story, and visual representations of this epic.</p>
